<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.igormaznitsa</groupId>

    <artifactId>langtrainer-pom</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <description>Desktop application to help learn dialogs and words of foreign languages.</description>

    <inceptionYear>2026</inceptionYear>

    <developers>
        <developer>
            <id>raydac</id>
            <name>Igor Maznitsa</name>
            <email>rrg4400@gmail.com</email>
            <url>https://www.igormaznitsa.com</url>
            <timezone>+2</timezone>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <url>https://github.com/raydac/langtrainer</url>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/raydac/langtrainer/issues</url>
    </issueManagement>

    <scm>
        <url>https://github.com/raydac/langtrainer</url>
        <connection>scm:git:git://github.com/raydac/langtrainer.git</connection>
        <developerConnection>scm:git:git@github.com:raydac/langtrainer.git</developerConnection>
    </scm>

    <organization>
        <name>Igor Maznitsa</name>
        <url>https://www.igormaznitsa.com</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
    </properties>

    <modules>
        <module>langtrainer-app</module>
        <module>langtrainer-win-launcher</module>
    </modules>


</project>